--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "author": "",
   "bugs": {},
   "dependencies": {
-    "require-all": "3.0.0",
-    "crypto-js": "4.0.0",
     "big-integer": "1.6.48",
-    "cors": "^2.8.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto-js": "4.0.0",
     "express": "^4.17.1",
     "good-js": "1.5.2",
-    "mongodb": "^3.5.4"
+    "mongodb": "^3.5.4",
+    "nodemon": "^2.0.6",
+    "require-all": "3.0.0"
   }
 }
