new interface runs

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "crypto-js": "4.0.0",
     "express": "^4.17.1",
     "ez-rpc": "file:./ez-rpc/javascript",
-    "good-js": "1.5.2",
+    "good-js": "^1.5.2",
     "mongodb": "^3.5.4",
     "nodemon": "^2.0.6",
     "require-all": "3.0.0",
