--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "good-js": "1.5.2",
     "mongodb": "^3.5.4",
     "nodemon": "^2.0.6",
-    "require-all": "3.0.0"
+    "require-all": "3.0.0",
+    "uuid": "^8.3.1"
   }
 }
