--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "crypto-js": "4.0.0",
         "express": "^4.17.1",
         "ez-rpc": "file:./ez-rpc/javascript",
+        "ez-rpc-backend": "0.0.10",
         "good-js": "^1.5.2",
         "mongodb": "^3.5.4",
         "nodemon": "^2.0.6",
