--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "cors": "^2.8.5",
         "crypto-js": "4.0.0",
         "express": "^4.17.1",
-        "ez-rpc": "file:./ez-rpc/javascript",
         "ez-rpc-backend": "0.0.10",
+        "fkill-cli": "^6.0.1",
         "good-js": "^1.5.2",
         "mongodb": "^3.5.4",
         "nodemon": "^2.0.6",
@@ -35,7 +35,10 @@
     "nix": {
         "mainRepo": "a332da8588aeea4feb9359d23f58d95520899e3c",
         "config": {
-            "allowUnfree": true
+            "allowUnfree": true,
+            "permittedInsecurePackages": [
+                "openssl-1.0.2u"
+            ]
         },
         "packages": [
             {
