--- a/source/structures/observations.yaml
+++ b/source/structures/observations.yaml
@@ -5,7 +5,7 @@
     _id:  ,
     ...((enumerated_keys)): !dictionary {
         # all of them have:
-        "type": !string (one of: frame, segment)
+        "type": !string (one of: segment, video)
         "videoId": !string (the _id of the video),
         "observer": !string (the username or model name),
         "isHuman": !true_or_null (true if the observer was a human),
@@ -13,16 +13,11 @@
         "rejectedBySomeone": !true_or_null (true if at least one human disagrees with the observation),
         "observation": !dictionary {
             "label": !string_or_null (a simple label for this time),
-            "labelConfidence": !float (a value between 0 and 1 of how confident the observer is),
+            "labelConfidence": !float (a value between -1 and 1, where 0 means "no idea" 1 means "it 100% exists", and -1 means it 100% does not exist),
         },
-        "formatIndex": !integer_or_null (which format the frame belongs to, which has framerate and resolution info),
-        
-        # iff frame then
-        "time": !float (timestamp measured in seconds with 3 decimal places),
         
         # iff segment then
         "startTime": !float (timestamp measured in seconds with 3 decimal places),
         "endTime": !float (timestamp measured in seconds with 3 decimal places),
-        
     }
 }
