--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "crypto-js": "4.0.0",
+        "didyoumean": "^1.2.1",
         "express": "^4.17.1",
         "ez-rpc-backend": "0.0.10",
         "fkill-cli": "^6.0.1",
