--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "mongodb": "^3.5.4",
         "nodemon": "^2.0.6",
         "require-all": "3.0.0",
-        "uuid": "^8.3.1"
+        "uuid": "^8.3.1",
+        "ytdl-core": "^4.1.3"
     }
 }
