--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "fast-json-stable-stringify": "^2.1.0",
         "fkill-cli": "^6.0.1",
         "good-js": "^1.5.2",
+        "js-levenshtein": "^1.1.6",
         "lodash": "^4.17.20",
         "mongodb": "^3.5.4",
         "nodemon": "^2.0.6",
